--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         Reems Closet online is currently under construction, please visit our shop, or find us on <a href="https://www.instagram.com/reemscloset">Instagram</a> or <a href="https://www.facebook.com/reemscloset">facebook</a>.</div>
     </article>
     <footer>
-      <div><img style="width:700px; height:135px;" alt="Reems Closet Shopfront" src="images/collages.jpg" /><BR /><hr><BR /><h6>Shop M27 Mazaya Centre, Sheikh Zayed Rd, Dubai, UAE * +971 4343 9553 * <a style="text-decoration: none;" href="mailto:info@reemscloset.com">info@reemscloset.com</a></h6></div> 
+      <div><img style="width:700px; height:135px;" alt="Reems Closet Shopfront" src="images/Collages.jpg" /><BR /><hr><BR /><h6>Shop M27 Mazaya Centre, Sheikh Zayed Rd, Dubai, UAE * +971 4343 9553 * <a style="text-decoration: none;" href="mailto:info@reemscloset.com">info@reemscloset.com</a></h6></div> 
     </footer>
 </body>
 </html>
