--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <div><a href="index2.htm"><img style="width:475px; height:135px;" alt="Reems Closet Header" src="Images/reemsheader.png" /></a></div>
+        <div><a href="www.reemscloset.com"><img style="width:475px; height:135px;" alt="Reems Closet Header" src="Images/reemsheader.png" /></a></div>
     </header>
     <article>
         <div><h3>A Pre-loved designer resale store</h3></div>
