--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
 </head>
 <body>
     <header>
-        <div><a href="www.reemscloset.com"><img style="width:475px; height:135px;" alt="Reems Closet Header" src="Images/reemsheader.png" /></a></div>
+        <div><a href="http://www.reemscloset.com"><img style="width:475px; height:135px;" alt="Reems Closet Header" src="Images/reemsheader.png" /></a></div>
     </header>
     <article>
-        <div><h3>A Pre-loved designer resale store</h3></div>
+        <div><h3>A pre-loved designer resale store</h3></div>
         <div><h5>Open since 2008 supplying Dubai with pre-loved authentic designer handbags, clothing and accessories all available at a fraction of their retail prices. At Reems Closet we guarantee the authenticity of all items in the shop.<BR /><BR />
         In an age of environmental conciousness, Reems Closet has been touted as one of Dubai's "Ethical Shops" and  truly has something for everyone. You may get lucky on your first visit or have to return to see what's hot. With fast moving stock it won't be long before you come across that 'must have' item at just the right price.</h5>
         Reems Closet online is currently under construction, please visit our shop, or find us on <a href="https://www.instagram.com/reemscloset">Instagram</a> or <a href="https://www.facebook.com/reemscloset">facebook</a>.</div>
